--- a/res/menu/browse.xml
+++ b/res/menu/browse.xml
@@ -29,6 +29,14 @@
         app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
         android:orderInCategory="101"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_set_template"
+        android:icon="@drawable/ic_closed_caption_white"
+        android:orderInCategory="100"
+        android:title="@string/action_set_template"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
