--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -56,9 +56,9 @@
     <color name="bg_swipe_group_item_left">#fff45f30</color>
     <color name="bg_swipe_group_item_right">#ff295db3</color>
 
-    <color name="primary">#03A9F4</color>
-    <color name="primary_dark">#0288D1</color>
-    <color name="primary_light">#B3E5FC</color>
+    <color name="primary">#409dc0</color>
+    <color name="primary_dark">#3985a1</color>
+    <color name="primary_light">#69afca</color>
     <color name="accent">@color/primary</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
