--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -15,7 +15,6 @@
   limitations under the License.
   -->
 <resources>
-
     <integer name="column_count">3</integer>
-
+    <integer name="google_play_services_version">9452000</integer>
 </resources>
